--- a/index.css
+++ b/index.css
@@ -43,6 +43,18 @@ body {
     padding: 8px 16px;
     font-size: 16px;
     font-weight: 500;
+    transition: 0.25s 0s ease;
+
+    &:hover {
+        background-color: #345685;
+        scale: .95;
+        cursor: pointer;
+    }
+
+    &:active {
+        scale: 1;
+        background-color: #2F3E53;
+    }
 }
 
 .input-pw-len {
@@ -54,6 +66,13 @@ body {
     width: 48px;
     border: 2px solid #10B981;
     border-radius: 5px;
+    transition: 0.25s 0s ease;
+    outline: none;
+
+    &:hover,
+    &:focus {
+        border: 2px solid #345685;
+    }
 }
 
 hr {
@@ -79,4 +98,16 @@ hr {
     flex: 1 1 200px;
     height: 36px;
     box-sizing: border-box;
+    transition: 0.25s 0s ease;
+
+    &:hover {
+        background-color: #345685;
+        scale: 1.05;
+        cursor: pointer;
+    }
+
+    &:active {
+        scale: 1;
+        background-color: #2F3E53;
+    }
 }
