--- a/index.css
+++ b/index.css
@@ -13,8 +13,6 @@ body {
     margin: 100px auto;
     width: 550px;
     border-radius: 20px;
-    /* box-sizing: border-box; */
-
 }
 .heading {
     font-family: Karla, sans-serif;
@@ -43,6 +41,7 @@ body {
     padding: 8px 16px;
     font-size: 16px;
     font-weight: 500;
+    text-shadow: 1px 1px 1px #1F2937;
     transition: 0.25s 0s ease;
 
     &:hover {
@@ -62,7 +61,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 16px;
-
 }
 
 label {
